--- a/MendiolaPalero_FinalsTP/app/src/main/AndroidManifest.xml
+++ b/MendiolaPalero_FinalsTP/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
                 android:value="" />
         </activity>
     </application>
-    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <!-- NUMBER 4 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ManifestOrder,ScopedStorage" />
 
 </manifest>
