--- a/MendiolaPalero_FinalsTP/app/src/main/AndroidManifest.xml
+++ b/MendiolaPalero_FinalsTP/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
-    <!-- NUMBER 4 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -27,9 +25,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        
+        
     </application>
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE">
 
-
-
-
+    </uses-permission>
 </manifest>
